--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
 	overflow: hidden !important;
 }
 
+.custom-frames-view-file {
+	padding: 0;
+	overflow: auto;
+}
+
 .custom-frames-frame {
 	width: 100%;
 	height: 100%;
